added excerpt component

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,8 @@
   <link rel="icon" type="image/x-icon" href="favicon.png">
 </head>
 <body>
-  <dsod-root></dsod-root>
+  <div class="site-wrap">
+    <dsod-root></dsod-root>
+  </div>
 </body>
 </html>
